Added new templates

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -1,12 +1,6 @@
 <h1>employee</h1>
 <hr>
-<table stlye="border-style:solid black 1px">
-    <tr>
-        <th>Name</th>
-    </tr>
-    <tr>
-        <td>{{ employee.name }}</td>
-        <td>{{ employee.hired_on }}</td>
-        <td>{{ employee.department.name }}</td>
-    </tr>
-</table>
+
+  <p>{{ employee.name }}</p>
+  <p>{{ employee.hired_on }}</p>
+  <p>{{ employee.department.name }}</p>
